<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/record_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/exBackground">

    <LinearLayout
        android:layout_width="match_parent"
...
            android:paddingTop="6dp"
            android:paddingBottom="16dp"
            android:background="?attr/exBackground"
            android:visibility="gone">

            <TextView
                android:id="@+id/record_btn_save_footer"
                style="@style/ExPrimary"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="Lưu buổi tập"
                android:textSize="16sp"
                android:textStyle="bold"
...
